--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
     rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/main.css">
    
 </head> 
 
@@ -43,9 +43,9 @@
     </div>
 </header>
     <main>
-        <section class="padding">
+        <section class="portfolio">
             <div class="container">
-            <ul class="portfolio">
+            <ul class="portfolio-padding">
                 <li class="item-two"><button class="button-two">Все</button></li>
                 <li class="item-two"><button class="button-two">Веб-сайты</button></li>
                 <li class="item-two"><button class="button-two">Приложения</button></li>
